Add new stylesheet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='style2.css'>
     <script src='script.js' defer></script>
     <title>calculator</title>
 </head>
@@ -21,7 +21,7 @@
                 <div class='column clear top'>C</div>
                 <div class='column plusMinus top'>&plusmn;</div>
                 <div class='column percent top'>&percnt;</div>
-                <div class='column backspace top'><img src='img/backspaceWhite.png' height='30'></div>
+                <div class='column backspace top'><img src='img/backspace-icon.svg' height='27'></div>
             </div>
             <div class='row'>
                 <div class='column seven digit'>7</div>
